--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "velez-js",
   "private": true,
+  "homepage": "https://JoseGV12.github.io/velez-react",
+  "description": "React prueba tecnica  ",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.1.0",
